--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,54 @@
-# Environment Variables for irAE Clinical Safety Assistant
+# Oncology irAE Clinical Safety Assistant
+# Environment Configuration Template
 # Copy this file to .env and fill in your values
 
+# =============================================================================
 # LLM Provider Configuration
-# Uncomment and configure your preferred provider
+# =============================================================================
+# Options: "openai", "anthropic", "huggingface"
+LLM_PROVIDER=huggingface
 
-# OpenAI
-# OPENAI_API_KEY=your-openai-api-key-here
+# =============================================================================
+# Hugging Face Configuration (Recommended - Free, No API Key Required)
+# =============================================================================
+# Primary model - MedGemma 4B (runs on CPU with quantization, ~8GB RAM)
+HUGGINGFACE_MODEL=google/medgemma-4b-it
+
+# Fallback model for complex reasoning (requires GPU, ~50GB RAM without quantization)
+HUGGINGFACE_MODEL_FALLBACK=google/medgemma-27b-text-it
+
+# Enable 8-bit quantization to reduce memory usage (recommended)
+USE_QUANTIZATION=true
+
+# =============================================================================
+# OpenAI Configuration (Optional - Requires API Key)
+# =============================================================================
+# OPENAI_API_KEY=sk-your-api-key-here
 # OPENAI_MODEL=gpt-4o
 
-# Anthropic
-# ANTHROPIC_API_KEY=your-anthropic-api-key-here
+# =============================================================================
+# Anthropic Configuration (Optional - Requires API Key)
+# =============================================================================
+# ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 # ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
-# Application Configuration
-# LOG_LEVEL=INFO
-# DEBUG=false
+# =============================================================================
+# Application Settings
+# =============================================================================
+# Enable LLM-based assessment by default
+DEFAULT_USE_LLM=false
 
+# Debug mode (set to true for development)
+DEBUG=false
+
+# Logging level: DEBUG, INFO, WARNING, ERROR
+LOG_LEVEL=INFO
+
+# Maximum evidence items to include in assessment
+MAX_EVIDENCE_ITEMS=10
+
+# =============================================================================
 # Streamlit Configuration (optional)
+# =============================================================================
 # STREAMLIT_SERVER_PORT=8501
 # STREAMLIT_SERVER_ADDRESS=localhost
