--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,12 @@ streamlit>=1.30.0
 # openai>=1.0.0
 # anthropic>=0.18.0
 
-# Local LLM (Hugging Face)
-transformers>=4.30.0
+# Local LLM (Hugging Face) - MedGemma requires transformers >= 4.50.0
+transformers>=4.50.0
 torch>=2.0.0
 accelerate>=0.20.0
 sentencepiece>=0.1.99
+bitsandbytes>=0.41.0
 
 # Async support
 aiohttp>=3.9.0
