--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ python-dotenv>=1.0.0
 # Web Interface
 streamlit>=1.30.0
 
+# API Framework
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+
 # LLM Integration (optional - uncomment to enable)
 # openai>=1.0.0
 # anthropic>=0.18.0
