--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,13 @@ uvicorn[standard]>=0.27.0
 # openai>=1.0.0
 # anthropic>=0.18.0
 
-# Local LLM (Hugging Face) - MedGemma requires transformers >= 4.50.0
-transformers>=4.50.0
+# Local LLM (Hugging Face) - MedGemma requirements
+# Pin transformers to a version compatible with Gemma3 architecture
+transformers>=4.51.0,<4.53.0
 torch>=2.0.0
-accelerate>=0.20.0
+accelerate>=0.26.0
 sentencepiece>=0.1.99
-bitsandbytes>=0.41.0
+bitsandbytes>=0.43.0
 
 # Async support
 aiohttp>=3.9.0
