Remove all OpenAI and Anthropic references - MedGemma only

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # =============================================================================
 # LLM Provider Configuration
 # =============================================================================
-# Options: "openai", "anthropic", "huggingface"
+# LLM Provider — MedGemma via Hugging Face
 LLM_PROVIDER=huggingface
 
 # =============================================================================
@@ -19,18 +19,6 @@ HUGGINGFACE_MODEL_FALLBACK=google/medgemma-27b-text-it
 
 # Enable 8-bit quantization to reduce memory usage (recommended)
 USE_QUANTIZATION=true
-
-# =============================================================================
-# OpenAI Configuration (Optional - Requires API Key)
-# =============================================================================
-# OPENAI_API_KEY=sk-your-api-key-here
-# OPENAI_MODEL=gpt-4o
-
-# =============================================================================
-# Anthropic Configuration (Optional - Requires API Key)
-# =============================================================================
-# ANTHROPIC_API_KEY=sk-ant-your-api-key-here
-# ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
 # =============================================================================
 # Application Settings
