--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,7 @@ streamlit>=1.30.0
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 
-# LLM Integration (optional - uncomment to enable)
-# openai>=1.0.0
-# anthropic>=0.18.0
-
-# Local LLM (Hugging Face) - MedGemma requirements
+# LLM — Google MedGemma via Hugging Face
 # Pin transformers to a version compatible with Gemma3 architecture
 transformers>=4.51.0,<4.53.0
 torch>=2.0.0
